# bevy-ruby

./: .gitignore  Cargo.toml  Gemfile  README.md  Rakefile  bevy.gemspec
.github/workflows/: ci.yml
crates/bevy/: Cargo.toml
crates/bevy/src/: app.rs  component.rs  entity.rs  error.rs  event.rs  input_bridge.rs  lib.rs  mesh_renderer.rs  query.rs  render_app.rs  resource.rs  schedule.rs  sprite_renderer.rs  system.rs  text_renderer.rs  world.rs
crates/bevy/src/types/: color.rs  dynamic.rs  math.rs  mod.rs  transform.rs
crates/bevy_ruby_render/: Cargo.toml
crates/bevy_ruby_render/src/: asset.rs  audio.rs  camera.rs  gamepad.rs  lib.rs  material.rs  mesh.rs  sprite.rs
docs/: api_reference.md  architecture.md  getting_started.md
examples/: animation_api.rb  asset_loading.rb  audio.rb  audio_advanced.rb  audio_effects_api.rb  breakout.rb  camera_effects.rb  custom_components.rb  desk_toy.rb  diagnostics_api.rb  ecs_advanced_api.rb  entities_and_components.rb  events.rb  game_menu.rb  gamepad.rb  gizmos_api.rb  hello_world.rb  hierarchy_api.rb  hot_reload.rb  input_handling.rb  interactive_buttons.rb  inventory_system.rb  lighting_api.rb  materials.rb  mesh_primitives.rb  navigation_api.rb  networking_api.rb  particle_api.rb  particle_system.rb  physics_api.rb  platformer.rb  plugins.rb  render_test.rb  resources.rb  scene_api.rb  shader_api.rb  shapes_2d.rb  space_shooter.rb  sprite_animation.rb  sprite_sheet_api.rb  (+7 more)
ext/bevy/: Cargo.toml  extconf.rb
ext/bevy/src/: conversions.rs  lib.rs  ruby_app.rs  ruby_color.rs  ruby_component.rs  ruby_entity.rs  ruby_math.rs  ruby_query.rs  ruby_render_app.rs  ruby_system.rs  ruby_world.rs
lib/: bevy.rb
lib/bevy/: animation.rb  app.rb  asset.rb  audio.rb  audio_effects.rb  camera.rb  component.rb  diagnostics.rb  ecs_advanced.rb  event.rb  gizmos.rb  gltf.rb  hierarchy.rb  input.rb  lighting.rb  material.rb  mesh.rb  navigation.rb  networking.rb  particle.rb  physics.rb  reflect.rb  render_graph.rb  resource.rb  scene.rb  shader.rb  shape.rb  skeletal.rb  sprite.rb  sprite_sheet.rb  state.rb  system.rb  text.rb  text_advanced.rb  timer.rb  transform.rb  ui.rb  ui_advanced.rb  version.rb  visibility.rb  (+1 more)
lib/bevy/plugins/: default_plugins.rb  input_plugin.rb
spec/: animation_spec.rb  app_spec.rb  asset_loading_spec.rb  asset_spec.rb  audio_effects_spec.rb  audio_spec.rb  camera_spec.rb  color_spec.rb  component_dsl_spec.rb  component_spec.rb  diagnostics_spec.rb  ecs_advanced_spec.rb  entity_spec.rb  event_spec.rb  gizmos_spec.rb  gltf_spec.rb  hierarchy_spec.rb  input_spec.rb  lighting_spec.rb  material_spec.rb  math_spec.rb  mesh_spec.rb  navigation_spec.rb  networking_spec.rb  particle_spec.rb  physics_spec.rb  reflect_spec.rb  remaining_spec.rb  render_graph_spec.rb  resource_spec.rb  scene_spec.rb  shader_spec.rb  shape_spec.rb  skeletal_spec.rb  spec_helper.rb  sprite_sheet_spec.rb  sprite_spec.rb  state_spec.rb  text_advanced_spec.rb  timer_spec.rb  (+6 more)
