[workspace]
members = ["crates/*", "ext/bevy"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ydah/bevy-ruby"

[workspace.dependencies]
bevy_ecs = "0.15"
bevy_app = "0.15"
bevy_math = "0.15"
bevy_transform = "0.15"
bevy_color = "0.15"
bevy_render = { version = "0.15", default-features = false }
bevy_sprite = { version = "0.15", default-features = false }
bevy_window = "0.15"
bevy_winit = "0.15"
bevy_asset = "0.15"
bevy_time = "0.15"
bevy_input = "0.15"
bevy_core_pipeline = { version = "0.15", default-features = false }
bevy_hierarchy = "0.15"
bevy_log = "0.15"
bevy_core = "0.15"
bevy_a11y = "0.15"
bevy_image = "0.15"
bevy_text = { version = "0.15", features = ["default_font"] }
bevy_picking = "0.15"
bevy_prototype_lyon = "0.13"
magnus = "0.8"
rb-sys = "0.9"
parking_lot = "0.12"
thiserror = "2"
